[package]
name = "murasame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sevenz-rust = { version = "0.5.0", features = ["compress", "aes256"] }
exact-reader = {version = "0.1.4", path = "vendor/exact-reader" }
md5 = "0.7.0"